--- a/myworkshop-2.csproj
+++ b/myworkshop-2.csproj
@@ -15,6 +15,9 @@
     <PackageReference Include="Willezone.Azure.WebJobs.Extensions.DependencyInjection" Version="1.0.1" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Constants\QueryConstants" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
